# swift-win32

./: .gitattributes  .gitignore  .gitmodules  .swift-format  Application.swift  ApplicationMain.swift  CMakeLists.txt  CMakePresets.json  Color.swift  Gemfile  HelloSwift.swift  LICENSE.txt  Package.swift  Package@swift-5.4.swift  Package@swift-5.7.swift  Package@swift-5.8.swift  Point.swift  README.md  Rect.swift  Size.swift  String.swift  Window.swift  WindowClass.swift  WindowDelegate.swift  _config.yml  azure-pipelines.yml  codecov.yml  index.md
Examples/: CMakeLists.txt  Calculator.swift  HelloSwift.exe.manifest  HelloSwift.swift
Examples/Calculator/: CMakeLists.txt  Calculator.exe.manifest  Calculator.swift  Info.plist
Examples/CustomPrincipalClass/: CMakeLists.txt  CustomPrincipalClass.exe.manifest  CustomPrincipalClass.swift  Info.plist  MyApplication.swift  README.md
Examples/HelloWorld/: CMakeLists.txt  HelloWorld.swift  Info.plist
Examples/Notepad/: CMakeLists.txt  Info.plist  Notepad.swift
Examples/UICatalog/: CMakeLists.txt  Info.plist  UICatalog.exe.manifest  UICatalog.swift
Sources/: CMakeLists.txt
Sources/Application/: Application.swift  ApplicationDelegate.swift  ApplicationMain.swift  Information.swift  LaunchKeyOptions.swift  _TriviallyConstructible.swift
Sources/AutoLayout/: LayoutConstraint.swift  LayoutPriority.swift  LayoutXAxisAnchor.swift
Sources/CG/: AffineTransform.swift  Point.swift  Rect.swift  Size.swift
Sources/CWinRT/: CMakeLists.txt  WinRTAugmentation.cc  XAMLSupport.c
Sources/CWinRT/include/: CWinRT.h  CWinRTMacros.h  module.modulemap
Sources/Examples/: HelloSwift.exe.manifest  HelloSwift.swift
Sources/Support/: BatteryMonitor.swift  Color+UIExtensions.swift  Error.swift  IndexPath+UIExtensions.swift  Logging.swift  Point+UIExtensions.swift  PropertyWrappers.swift  Range.swift  Rect+UIExtensions.swift  RunLoop+UIExtensions.swift  String+UIExtensions.swift  String.swift  WinSDK+Extensions.swift  WindowsHandle+UIExtensions.swift  WindowsHandle.swift
Sources/SwiftUIWin32/: Application.swift  EmptyView.swift  Scene.swift  SceneBuilder.swift  ViewBuilder.swift  WindowGroup.swift
Sources/SwiftUIWin32/Essentials/: Application.swift
Sources/SwiftWin32/: CMakeLists.txt
Sources/SwiftWin32/Animation and Haptics/: ViewControllerContextTransitioning.swift
Sources/SwiftWin32/App Extensions/: InputViewController.swift
Sources/SwiftWin32/App and Environment/: AdaptivePresentationControllerDelegate.swift  Application.swift  ApplicationDelegate.swift  ApplicationMain.swift  Device.swift  TraitCollection.swift  TraitEnvironment.swift
Sources/SwiftWin32/Appearance Customization/: Appearance.swift  AppearanceContainer.swift
Sources/SwiftWin32/Application/: ApplicationDelegate.swift  ApplicationMain.swift  Information.swift  LaunchKeyOptions.swift  _TriviallyConstructible.swift
Sources/SwiftWin32/AutoLayout/: LayoutAnchor.swift  LayoutConstraint+Cassowary.swift  LayoutConstraint.swift  LayoutDimension.swift  LayoutGuide.swift  LayoutPriority.swift  LayoutSupport.swift  LayoutXAxisAnchor.swift  LayoutYAxisAnchor.swift
Sources/SwiftWin32/CA/: Transform3D.swift
Sources/SwiftWin32/CG/: AffineTransform.swift  Point.swift  Rect.swift  Size.swift  Vector.swift
Sources/SwiftWin32/CoreGraphics/: Rect.swift  Size.swift
Sources/SwiftWin32/Drag and Drop/: SpringLoadedInteractionContext.swift
Sources/SwiftWin32/Drawing/: BezierPath.swift  Color.swift
Sources/SwiftWin32/Focus-Based Navigation/: FocusAnimationCoordinator.swift  FocusEnvironment.swift  FocusItem.swift  FocusItemContainer.swift  FocusMovementHint.swift  FocusUpdateContext.swift
Sources/SwiftWin32/Images and PDF/: Image.swift
Sources/SwiftWin32/Keyboards and Input/: TextInputTraits.swift
Sources/SwiftWin32/Menus and Shortcuts/: Action.swift  Command.swift  ContextMenuConfiguration.swift  ContextMenuInteraction.swift  ContextMenuInteractionAnimating.swift  ContextMenuInteractionCommitAnimating.swift  ContextMenuInteractionDelegate.swift  Menu.swift  MenuBuilder.swift  MenuElement.swift  MenuSystem.swift  PreviewParameters.swift  PreviewTarget.swift  TargetedPreview.swift
Sources/SwiftWin32/Platform/: BatteryMonitor.swift  Error.swift  OrientationSensor.swift  PropertyWrappers.swift  Win32+Menu.swift  Win32+PropertyWrappers.swift  WindowClass.swift  WindowsHandle.swift
Sources/SwiftWin32/Pointer Interactions/: PointerInteraction.swift  PointerInteractionAnimating.swift  PointerInteractionDelegate.swift  PointerRegion.swift  PointerRegionRequest.swift  PointerStyle.swift
Sources/SwiftWin32/Support/: Array+Extensions.swift  Date+Extensions.swift  Error.swift  IndexPath+UIExtensions.swift  Logging.swift  Point+UIExtensions.swift  Rect+UIExtensions.swift  Size+UIExtensions.swift  String+UIExtensions.swift  Win32MessageDecoder.swift  WinSDK+Extensions.swift  WinSDK+UIExtensions.swift  WindowMessage.swift  WindowsHandle+UIExtensions.swift
Sources/SwiftWin32/Text Display and Fonts/: Font.swift  FontDescriptor.swift  FontMetrics.swift
Sources/SwiftWin32/Text Storage/: ParagraphStyle.swift
Sources/SwiftWin32UI/: CMakeLists.txt  EmptyView.swift  Never+SwiftUI.swift  View.swift  ViewBuilder.swift
Sources/UI/: AlertAction.swift  AlertController.swift  AnimationCurve.swift  Button.swift  CellConfigurationState.swift  Color.swift  ConfigurationState.swift  ContentContainer.swift  ContentSizeCategoryAdjusting.swift  ContextMenuConfiguration.swift  ContextMenuInteraction.swift  ContextMenuInteractionCommitAnimating.swift  ContextMenuInteractionDelegate.swift  Control.swift  CoordinateSpace.swift  DatePicker.swift  Device.swift  EdgeInsets.swift  Event.swift  Font.swift  Label.swift  PreviewParameters.swift  ProgressView.swift  RenderContext.swift  Responder.swift  Scene.swift  SceneConfiguration.swift  SceneDelegate.swift  SceneSession.swift  SceneSizeRestrictions.swift  Screen.swift  Slider.swift  Stepper.swift  Switch.swift  TableView.swift  TableViewCell.swift  TableViewDataSource.swift  TextField.swift  TextInputTraits.swift  TextView.swift  (+11 more)
SwiftWin32/: Axis.md  (+234 more)
(+203 files in other folders)
